<?xml version="1.0"?>
<package>
  <name>gnd_gyrodometor</name>
  <version>0.1.0</version>
  <description>

     gnd_gyrodometor

  </description>
  <maintainer email="dummy@dummy.com">tyamada</maintainer>
  <author>tyamada</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vectornav</build_depend>
  <build_depend>gnd_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gndlib</build_depend>
  <build_depend>gnd_rosutil</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vectornav</run_depend>
  <run_depend>gnd_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gnd_rosutil</run_depend>

</package>
